# sensei

./: .gitignore  Cargo.toml  LICENSE  README  README.md
src/: lib.rs  main.rs
tests/: api.rs  cli.rs
