[package]
name = "ningen"
version = "0.1.0"
edition = "2021"
description = "Generates ninja targets from source tree"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap-verbosity-flag = "3.0"
anyhow = "1.0"
log = "0.4.25"
env_logger = "0.11.6"
colored = "3.0.0"

[dev-dependencies]
assert_fs = "1.1.2"
assert_cmd = "2.0.14"
predicates = "3.1.0"
